Added H2, H3 headers after running through HTML validation.

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ h1:hover {
   color: red;
 }
 
+h2, h3 {
+  font-weight: 600;
+  font-size: 20px;
+}
+
 header {
   background: black;
   color: white;
